testsuite/tests/properties/invalid_lazy_field/entity_info_2.lkt
import common

class FooNode implements Node[FooNode] {
    @exported fun flag_set(): Bool = self.info.md.flag
}

class Example: FooNode {
    @exported @lazy p: Bool = node.flag_set()
}
